[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-shield"
version = "1.1.0"
description = "Context-aware PII detection for LLM pipelines and data workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Intellirim"}]
keywords = ["pii", "privacy", "security", "llm", "data-protection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
pii-shield = "pii_shield.cli:main"

[project.urls]
Homepage = "https://github.com/intellirim/pii-guard"
Issues = "https://github.com/intellirim/pii-guard/issues"
